--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "wp-scripts start",
-    "build": "wp-scripts build"
+    "build": "wp-scripts build",
+    "css:dev": "sass --no-source-map src/styles/app.scss build/app.css",
+    "css:prod": "sass --style=compressed src/styles/app.scss build/app.css",
+    "dev": "npm-run-all --parallel start css:dev",
+    "prod": "npm run build && npm run css:prod",
+    "i18n:pot": "wp i18n make-pot . languages/nk-react.pot --domain=nk-react --exclude=node_modules,build,vendor",
+    "i18n:json": "wp i18n make-json languages --no-purge",
+    "i18n:all": "npm run i18n:pot && npm run i18n:json"
   },
   "keywords": [
     "wordpress",
@@ -23,8 +30,11 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
+    "@wordpress/i18n": "^6.30.0",
     "@wordpress/element": "^6.30.0",
-    "@wordpress/scripts": "^30.23.0"
+    "@wordpress/scripts": "^30.23.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.77.0"
   },
   "dependencies": {
     "react-router-dom": "^7.8.2"
