Improves menu responsiveness and theme switching
Refactors menu logic and adds a responsive mobile toggle for better navigation on small screens. Synchronizes the body theme class and data attribute for improved theme handling. Refines spacing and layout for consistency. Updates theme sizing and block gap to align with design standards.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "wp-scripts start",
     "build": "wp-scripts build",
     "css:dev": "sass --no-source-map src/styles/app.scss build/app.css",
+    "css:watch": "sass --watch --no-source-map src/styles/app.scss:build/app.css",
     "css:prod": "sass --style=compressed src/styles/app.scss build/app.css",
-    "dev": "npm-run-all --parallel start css:dev",
+    "dev": "npm-run-all --parallel start css:watch",
     "prod": "npm run build && npm run css:prod",
     "i18n:pot": "wp i18n make-pot . languages/nk-react.pot --domain=nk-react --exclude=node_modules,build,vendor",
     "i18n:json": "wp i18n make-json languages --no-purge",
