--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@wordpress/i18n": "^6.30.0",
     "@wordpress/element": "^6.30.0",
     "@wordpress/scripts": "^30.23.0",
+    "@wordpress/icons": "^6.30.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.77.0"
   },
